# cctestx

./: Jenkinsfile  LICENSE  README.md  checkpoint_example.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  tox.ini
api/: __init__.py  config.py  responses.py  schemas.py  utils.py
cctestx/: README.md  __init__.py  config.py
cctestx/dataset/: __init__.py
cctestx/models/: __init__.py
cctestx/visualization/: visualize.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-cctestx_start.ipynb
tests/: conftest.py
tests/test_metadata/: conftest.py  test_metadata.py
tests/test_predictions/: conftest.py  test_predictions.py
tests/test_training/: conftest.py  test_training.py
