[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cctestx"
description = "Cookiecutter test project for AI4OS / advanced branch"
# !! Authors and Authors_emails are taken from setup.py. Otherwise wrongly rendered !!
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/vykozlov/cctestx"
"Bug Tracker" = "https://github.com/vykozlov/cctestx/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = ["DATA_PATH=tests/datasets", "MODELS_PATH=tests/models"]

[tool.setuptools]
packages = ["cctestx", "cctestx.api"]

[tool.setuptools.package-dir]
"cctestx.api" = "api"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
cctestx = "cctestx.api"
